--- a/talentry/package.json
+++ b/talentry/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^12.0.0",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.525.0",
     "next": "15.4.3",
